<resources>
    <string name="app_name">DoitTestTask</string>

    <string name="signinTitle">Sign In</string>
    <string name="signinEmailHint">E-mail</string>
    <string name="signinPasswordHint">Password</string>
    <string name="signinModeLoginRegister">Login / Register</string>
    <string name="signinLogIn">Log in</string>
    <string name="signinRegister">Register</string>
    <string name="signinErrorInvalidEmailAddress">Invalid E-mail address</string>
    <string name="signinErrorEmptyEmail">You should fill in E-mail</string>
    <string name="signinErrorEmptyPassword">You should fill in password</string>
    <string name="addTaskSave">Save</string>
    <string name="addTaskTitle">Title</string>
    <string name="addTaskPriority">Priority</string>
    <string name="addTaskPriorityHigh">High</string>
    <string name="addTaskPriorityMedium">Medium</string>
    <string name="addTaskPriorityLow">Low</string>
    <string name="addTaskDescription">Description</string>
    <string name="addTaskDateTime">Date/Time</string>
    <string name="addTaskErrorEmptyTitle">Please fill in the title</string>
    <string name="addTaskErrorEmptyDate">Please select date and time</string>
    <string name="addTaskErrorEmptyPriority">Please select priority</string>
    <string name="errorNoInternetConnection">No internet connection</string>
    <string name="addTaskWasSaved">Task was successfully saved</string>
    <string name="editTaskWasSaved">Task was successfully deleted</string>
    <string name="addTaskCheckFields">Check all fields</string>
    <string name="errorUnexpected">Unexpected error</string>
    <string name="taskListPriorityHigh">↑High</string>
    <string name="taskListPriorityNormal">Normal</string>
    <string name="taskListPriorityLow">↓Low</string>
    <string name="itemTaskDueTo">Due to</string>
    <string name="taskDetailsDelete">Delete</string>
    <string name="taskDetailsEdit">Edit</string>
    <string name="taskDetailsSave">Save</string>
    <string name="editTaskChangesSaved">Changes was successfully saved</string>
    <string name="signinAuthenticationFailed">Authentication failed. Please sign in again</string>
    <string name="menuSortByName">By name</string>
    <string name="menuSortByTimeOfCreation">By time of creation</string>
    <string name="menuSortByExpirationTime">By expiration time</string>
    <string name="menuSortDescending">Descending</string>
    <string name="menuLogOut">Log out</string>
    <string name="menuSave">Save</string>
    <string name="menuDelete">Delete</string>
    <string name="menuEdit">Edit</string>
    <string name="detailsToolbar">Task details</string>
</resources>
