<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      tools:ignore="AlwaysShowAction">

    <item
            android:id="@+id/menuEdit"
            android:icon="@drawable/ic_edit"
            app:showAsAction="always"
            android:title="@string/menuEdit"/>
    <item
            android:id="@+id/menuSave"
            android:icon="@drawable/ic_save"
            app:showAsAction="always"
            android:title="@string/menuSave"
            android:visible="false"
            tools:visible="true"/>
    <item
            android:id="@+id/menuDelete"
            android:icon="@drawable/ic_delete"
            app:showAsAction="always"
            android:title="@string/menuDelete"/>
</menu>