<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="Autofill,TextFields">

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineLeft"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintGuide_begin="24dp"/>

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintGuide_end="24dp"/>

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintGuide_begin="24dp"/>

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineBottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintGuide_end="24dp"/>

    <TextView
            android:id="@+id/textTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/addTaskTitle"
            android:labelFor="@id/editTextTitle"
            app:layout_constraintTop_toTopOf="@id/guidelineTop"
            app:layout_constraintLeft_toLeftOf="@id/guidelineLeft"
            app:layout_constraintRight_toRightOf="@id/guidelineRight"/>

    <EditText
            android:id="@+id/editTextTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/textTitle"
            app:layout_constraintLeft_toLeftOf="@id/guidelineLeft"
            app:layout_constraintRight_toRightOf="@id/guidelineRight"
            android:layout_marginTop="8dp"
            style="@style/DoitEditText"/>

    <TextView
            android:id="@+id/textErrorEmptyTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addTaskErrorEmptyTitle"
            android:textColor="@color/colorError"
            android:visibility="gone"
            tools:visibility="visible"
            app:layout_constraintRight_toRightOf="@id/editTextTitle"
            app:layout_constraintTop_toBottomOf="@id/editTextTitle"/>

    <TextView
            android:id="@+id/textPriority"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/addTaskPriority"
            android:layout_marginTop="24dp"
            app:layout_constraintLeft_toLeftOf="@id/guidelineLeft"
            app:layout_constraintRight_toRightOf="@id/guidelineRight"
            app:layout_constraintTop_toBottomOf="@id/editTextTitle"/>

    <RadioGroup
            android:id="@+id/radioGroupPriority"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="@id/guidelineLeft"
            app:layout_constraintRight_toRightOf="@id/guidelineRight"
            app:layout_constraintTop_toBottomOf="@id/textPriority">

        <RadioButton
                android:id="@+id/radioLow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/addTaskPriorityLow"
                android:layout_weight="1"
                android:background="@drawable/bg_radio_button_priority_low"
                style="@style/DoitRadioButton"/>

        <Space
                android:layout_width="8dp"
                android:layout_height="wrap_content"/>

        <RadioButton
                android:id="@+id/radioMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/addTaskPriorityMedium"
                android:layout_weight="1"
                android:background="@drawable/bg_radio_button_priority_normal"
                style="@style/DoitRadioButton"/>

        <Space
                android:layout_width="8dp"
                android:layout_height="wrap_content"/>

        <RadioButton
                android:id="@+id/radioHigh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/addTaskPriorityHigh"
                android:layout_weight="1"
                android:background="@drawable/bg_radio_button_priority_high"
                style="@style/DoitRadioButton"/>
    </RadioGroup>

    <TextView
            android:id="@+id/textErrorEmptyPriority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addTaskErrorEmptyPriority"
            android:textColor="@color/colorError"
            android:visibility="gone"
            tools:visibility="visible"
            app:layout_constraintRight_toRightOf="@id/guidelineRight"
            app:layout_constraintTop_toBottomOf="@id/radioGroupPriority"/>

    <TextView
            android:id="@+id/textDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/addTaskDescription"
            android:layout_marginTop="24dp"
            android:labelFor="@id/editTextDescription"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/radioGroupPriority"
            app:layout_constraintLeft_toLeftOf="@id/guidelineLeft"
            app:layout_constraintRight_toRightOf="@id/guidelineRight"/>

    <EditText
            android:id="@+id/editTextDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/textDescription"
            app:layout_constraintLeft_toLeftOf="@id/guidelineLeft"
            app:layout_constraintRight_toRightOf="@id/guidelineRight"
            android:layout_marginTop="8dp"
            style="@style/DoitEditText"/>

    <TextView
            android:id="@+id/textDateTimeLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/addTaskDateTime"
            android:layout_marginTop="24dp"
            app:layout_constraintLeft_toLeftOf="@id/guidelineLeft"
            app:layout_constraintRight_toRightOf="@id/guidelineRight"
            app:layout_constraintTop_toBottomOf="@id/editTextDescription"/>

    <TextView
            android:id="@+id/textDateTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintLeft_toLeftOf="@id/guidelineLeft"
            app:layout_constraintRight_toRightOf="@id/guidelineRight"
            app:layout_constraintTop_toBottomOf="@id/textDateTimeLabel"
            style="@style/DoitEditText"
            tools:ignore="TextFields"/>

    <TextView
            android:id="@+id/textErrorEmptyDateTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addTaskErrorEmptyDate"
            android:textColor="@color/colorError"
            android:visibility="gone"
            tools:visibility="visible"
            app:layout_constraintRight_toRightOf="@id/textDateTime"
            app:layout_constraintTop_toBottomOf="@id/textDateTime"/>

    <Button
            android:id="@+id/buttonSave"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/addTaskSave"
            app:layout_constraintLeft_toLeftOf="@id/guidelineLeft"
            app:layout_constraintRight_toRightOf="@id/guidelineRight"
            app:layout_constraintBottom_toBottomOf="@id/guidelineBottom"/>
</androidx.constraintlayout.widget.ConstraintLayout>