<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".feature.signin.SigninActivity">

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineLeft"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintGuide_begin="24dp"/>

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintGuide_end="24dp"/>

    <TextView
            android:id="@+id/textTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/signinTitle"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintVertical_bias="0.4"
            app:layout_constraintLeft_toLeftOf="@id/guidelineLeft"
            app:layout_constraintRight_toRightOf="@id/guidelineRight"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/editTextEmail"
            style="@style/TextAppearance.AppCompat.Headline"/>

    <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/signinEmailHint"
            android:inputType="textEmailAddress"
            app:layout_constraintLeft_toLeftOf="@id/guidelineLeft"
            app:layout_constraintRight_toRightOf="@id/guidelineRight"
            app:layout_constraintTop_toBottomOf="@id/textTitle"
            app:layout_constraintBottom_toTopOf="@id/editTextPassword"
            android:layout_marginTop="24dp"
            style="@style/DoitEditText"/>

    <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/signinPasswordHint"
            android:inputType="textVisiblePassword"
            app:layout_constraintLeft_toLeftOf="@id/guidelineLeft"
            app:layout_constraintRight_toRightOf="@id/guidelineRight"
            app:layout_constraintTop_toBottomOf="@id/editTextEmail"
            app:layout_constraintBottom_toTopOf="@id/switchMode"
            android:layout_marginTop="24dp"
            style="@style/DoitEditText"/>

    <Switch
            android:id="@+id/switchMode"
            android:layout_width="0dp"
            android:layout_height="27dp"
            android:text="@string/signinModeLoginRegister"
            app:layout_constraintLeft_toLeftOf="@id/guidelineLeft"
            app:layout_constraintRight_toRightOf="@id/guidelineRight"
            app:layout_constraintTop_toBottomOf="@id/editTextPassword"
            app:layout_constraintBottom_toTopOf="@id/buttonSignIn"
            android:layout_marginTop="24dp"/>

    <Button
            android:id="@+id/buttonSignIn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/signinLogIn"
            app:layout_constraintLeft_toLeftOf="@id/guidelineLeft"
            app:layout_constraintRight_toRightOf="@id/guidelineRight"
            app:layout_constraintTop_toBottomOf="@id/switchMode"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="24dp"/>

    <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:elevation="2dp"
            android:visibility="gone"
            tools:visibility="visible"
            app:layout_constraintTop_toTopOf="@id/buttonSignIn"
            app:layout_constraintBottom_toBottomOf="@id/buttonSignIn"
            app:layout_constraintRight_toRightOf="@id/buttonSignIn"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            style="@style/Base.Widget.AppCompat.ProgressBar"/>
</androidx.constraintlayout.widget.ConstraintLayout>